Fix instant distortion of parent element when hovered over button

--- a/CSS/github.css
+++ b/CSS/github.css
@@ -10,6 +10,7 @@
     cursor: pointer;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
+    border: 2px solid transparent;
 }
 
 .gitHubStar{
